# talks

./: .gitignore  .gitlab-ci.yml  403.html  404.html  CNAME  README.md  about.html  about.md  archives.html  cabal.project.freeze  composable-concurrency-with-zio-stm.html  deploy.sh  index.html  package-lock.json  package.json  site.cabal  stack.yaml
.github/workflows/: hakyll.yml
about/: index.html
archives/: index.html
assets/nix/: Vagrantfile  flake.nix  pkgsCross.riscv64.vim.derivation.json
assets/nix-guide/: flake.nix
assets/virtualization/: kvm.c
composable-concurrency-with-zio-stm/: index.html
css/: custom.css  default.css  diff.txt  tufte.css  tufte.original.css  tufte_site.css
expression-problem/: index.html
nix-for-developers-in-a-hurry/: index.html
pages/: index.html
posts/: 2020-04-18-stm-zio.org  2021-03-23-the-hitchhiker-s-guide-to-nixos.org  2022-03-01-virtualization-the-view-from-20000-feet.org  2022-07-05-nix-for-developers-in-a-hurry.org  2022-09-04-take-all-your-belongings-with-you.org  2024-01-12-expression-problem.org
src/: Main.hs
take-all-your-belongings-with-you/: index.html
templates/: default.html  nav.html  post.html
the-hitchhiker-s-guide-to-nixos/: index.html
virtualization-the-view-from-20000-feet/: index.html
