name: site
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

executable site
 main-is: Main.hs
 hs-source-dirs: src
 build-depends: base == 4.*,
                containers,
                filepath,
                hakyll >= 4.12,
                split >= 0.2.3.3,
                text >= 1.2.3.1,
                pandoc,
                pandoc-types

 ghc-options: -threaded
 default-language: Haskell2010
